made title, stopwatch and buttons more mobile friendly (smaller size on smaller devices...)

--- a/style.css
+++ b/style.css
@@ -23,14 +23,14 @@ body {
 }
 
 .title h1 {
-    font-size: 4rem;
+    font-size: 6rem;
 }
 
 
 .time {
     height: 200px;
-    padding: 10px;
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -42,9 +42,15 @@ body {
 }
 
 #hour, #minute, #second {
-    font-size: 3rem;
+    font-size: 5rem;
+    width: 100px;
     margin-left: 8px;
-    width: 80px;
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .buttons button {
@@ -60,15 +66,19 @@ body {
 /* media queries */
 
 
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 768px) {
     .title h1 {
-        font-size: 6rem;
+        font-size: 5rem;
     }
 
     #hour, #minute, #second {
         font-size: 4rem;
     }
-    
+    .double-dot {
+        font-size: 2rem;
+        padding-left: 4px;
+    }
+
 }
 
 @media only screen and (max-width: 600px) {
@@ -77,12 +87,17 @@ body {
     }
     #hour, #minute, #second {
         font-size: 2rem;
+        margin-left: 0px;
+        width: 80px;
+    }
+    .double-dot {
+        padding-left: 0px;
     }
 
     .buttons button {
         padding: 4px;
-        font-size: 16px;
-        width: 80px;
+        font-size: 14px;
+        width: 60px;
     } 
     .time {
         height: 150px;
@@ -95,6 +110,12 @@ body {
     }
     #hour, #minute, #second {
         font-size: 2rem;
+        margin-left: 0px;
+        width: 70px;
+    }
+    .double-dot {
+        padding-left: 0px;
+        font-size: 1.5rem;
     }
 
     .buttons button {
